--- a/source-code/py-notebook/SA-conservation-sensitive.ipynb
+++ b/source-code/py-notebook/SA-conservation-sensitive.ipynb
@@ -12,8 +12,12 @@
     "* Collection: __[dr653](https://collections.ala.org.au/public/show/dr653)__ __[dr884](https://collections.ala.org.au/public/show/dr884)__\n",
     "\n",
     "### Source Data\n",
+    "**Conservation lists**\n",
     "* [Fauna](https://data.environment.sa.gov.au/Content/Publications/fauna-bdbsa-taxonomy.xlsx)\n",
     "* [Flora](https://data.environment.sa.gov.au/Content/Publications/vascular-plants-bdbsa-taxonomy.xlsx)\n",
+    "\n",
+    "**Sensitive List**\n",
+    "* Source Data: https://data.environment.sa.gov.au/Content/Publications/DEW_SAEnvironmentallySensitiveDataREGISTER.xls\n",
     "\n",
     "**Metadata Description**\n",
     "\n",
@@ -615,7 +619,9 @@
    }
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "## Sensitive List\n",
     "Source Data: https://data.environment.sa.gov.au/Content/Publications/DEW_SAEnvironmentallySensitiveDataREGISTER.xls"
@@ -623,7 +629,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%% md\n"
+     "name": "#%%\n"
     }
    }
   },
