Updated Sensitive list data and cod

--- a/source-code/py-notebook/NSW-conservation-sensitive.ipynb
+++ b/source-code/py-notebook/NSW-conservation-sensitive.ipynb
@@ -69,100 +69,24 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "outputs": [],
-   "source": [
-    "# %%script echo skipping # comment this line to download the files and save locally\n",
-    "\n",
-    "with urllib.request.urlopen(\"https://data.bionet.nsw.gov.au/biosvcapp/odata/SpeciesNames\") as url:\n",
-    "    data = json.loads(url.read().decode())\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [],
-   "source": [
-    "data = pd.json_normalize(data, record_path =['value'])## Process Conservation"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [],
-   "source": [
-    "# df = data[data.stateConservation != 'Not Listed']\n",
-    "# df = data[data(['stateConservation'] != 'Not Listed') & (data['isCurrent'] = 'true')]\n",
-    "df= data[(data['stateConservation'] !='Not Listed') & (data['isCurrent'] == 'true')]\n",
-    "\n",
-    "# df = data[(data['stateConservation'] != 'Not Listed') & (data['isCurrent'] = 'true')]"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "outputs": [
     {
      "data": {
       "text/plain": "array(['Vulnerable', 'Endangered', 'Critically Endangered', 'Extinct'],\n      dtype=object)"
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['stateConservation'].unique()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "1026"
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(df.index)"
+    "# %%script echo skipping # comment this line to download the files and save locally\n",
+    "\n",
+    "with urllib.request.urlopen(\"https://data.bionet.nsw.gov.au/biosvcapp/odata/SpeciesNames\") as url:\n",
+    "    data = json.loads(url.read().decode())\n",
+    "data = pd.json_normalize(data, record_path =['value'])## Process Conservation\n",
+    "cdf= data[(data['stateConservation'] !='Not Listed') & (data['isCurrent'] == 'true')]\n",
+    "cdf['stateConservation'].unique()"
    ],
    "metadata": {
     "collapsed": false,
@@ -200,9 +124,9 @@
    ],
    "source": [
     "## Map statuses\n",
-    "state = 'NSW'\n",
-    "fname = statusDir + state + \"-codes.csv\"\n",
-    "df = lf.map_status(state, fname, df)"
+    "# state = 'NSW'\n",
+    "# fname = statusDir + state + \"-codes.csv\"\n",
+    "# df = lf.map_status(state, fname, df)"
    ],
    "metadata": {
     "collapsed": false,
@@ -227,17 +151,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "outputs": [],
    "source": [
-    "conservation = df[(df['speciesID'] == df['taxonID'])]\n",
-    "conservation = conservation[\n",
-    "    ['taxonRank', 'kingdom', 'class', 'order', 'family', 'genus', 'scientificName', 'specificEpithet', 'vernacularName',\n",
-    "     'establishmentMeans', 'stateConservation', 'protectedInNSW', 'sensitivityClass', 'TSProfileID',\n",
-    "     'countryConservation', 'dcterms_modified', 'speciesID', 'taxonID']]\n",
-    "conservation['status'] = conservation['stateConservation']\n",
-    "conservation = conservation.rename(columns={\"stateConservation\": \"sourceStatus\"})\n",
-    "conservation = conservation.rename(columns={\"TSProfileID\": \"tsprofileid\"})"
+    "conservationlist = cdf[(cdf['speciesID'] == cdf['taxonID'])]\n",
+    "conservationlist = conservationlist[\n",
+    "    ['scientificName', 'vernacularName','stateconservation']]\n",
+    "conservationlist['status'] = conservationlist['stateConservation']\n",
+    "conservationlist = conservationlist.rename(columns={\"stateConservation\": \"sourceStatus\"})\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -249,7 +170,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Write dataframe to CSV - UTF-8 encoding"
+    "## Write dataframe to CSV - UTF-8 encoding"
    ],
    "metadata": {
     "collapsed": false,
@@ -260,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -273,7 +194,7 @@
    ],
    "source": [
     "print(\"Writing to CSV\")\n",
-    "conservation.to_csv(projectDir + \"current-lists/conservation-lists/NSW-conservation-2023-03-15.csv\",encoding=\"UTF-8\",index=False)\n",
+    "conservationlist.to_csv(projectDir + \"current-lists/conservation-lists/NSW-conservationlist-2023-05-05.csv\",encoding=\"UTF-8\",index=False)\n",
     "print('Finished processing')"
    ],
    "metadata": {
@@ -297,10 +218,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "outputs": [],
    "source": [
-    "df = data"
+    "sdf = data"
    ],
    "metadata": {
     "collapsed": false,
@@ -323,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "dictn = {\"Category 3\": \"1km\",\n",
@@ -340,17 +261,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "94900b2e",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "select = ['Category 3','Category 2','Category 1']"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
@@ -376,11 +297,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "outputs": [],
    "source": [
-    "df['generalisation'] = df['sensitivityClass']\n",
-    "df['generalisation'] = df['generalisation'].replace(dictn)"
+    "sdf['generalisation'] = sdf['sensitivityClass']\n",
+    "sdf['generalisation'] = sdf['generalisation'].replace(dictn)"
    ],
    "metadata": {
     "collapsed": false,
@@ -404,13 +325,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "outputs": [],
    "source": [
-    "sensitive = df[(df['speciesID'] == df['taxonID']) & df['sensitivityClass'].isin(select)]\n",
-    "sensitive = sensitive[['taxonRank', 'kingdom' ,'class','order','family','genus','scientificName','specificEpithet','vernacularName','establishmentMeans','stateConservation','protectedInNSW','sensitivityClass','TSProfileID','countryConservation','dcterms_modified','speciesID','taxonID','generalisation']]\n",
-    "sensitive['status'] = sensitive['stateConservation']\n",
-    "sensitive = sensitive.rename(columns={\"stateConservation\": \"sourceStatus\", \"sensitivityClass\": \"category\", \"TSProfileID\": \"tsprofileid\"})"
+    "sensitivelist = sdf[(sdf['speciesID'] == sdf['taxonID']) & sdf['sensitivityClass'].isin(select)]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                             scientificName               vernacularName  \\\n5                  Callocephalon fimbriatum           Gang-gang Cockatoo   \n159                           Ninox strenua                 Powerful Owl   \n326                        Tyto tenebricosa                    Sooty Owl   \n356                         Ninox connivens                  Barking Owl   \n382               Hoplocephalus bungaroides           Broad-headed Snake   \n...                                     ...                          ...   \n21986  Anthosachne kingiana subsp. kingiana    Philip Island Wheat Grass   \n22658                       Caladenia tensa          Rigid Spider-orchid   \n22659                  Caladenia atroclavia  Black-clubbed Spider-orchid   \n23131                  Prasophyllum sandrae     Majors Creek Leek Orchid   \n23133                Backhousia subargentea               Giant Ironwood   \n\n      generalisation  \n5                1km  \n159              1km  \n326              1km  \n356              1km  \n382             10km  \n...              ...  \n21986            1km  \n22658           10km  \n22659           10km  \n23131           10km  \n23133            1km  \n\n[199 rows x 3 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>scientificName</th>\n      <th>vernacularName</th>\n      <th>generalisation</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>5</th>\n      <td>Callocephalon fimbriatum</td>\n      <td>Gang-gang Cockatoo</td>\n      <td>1km</td>\n    </tr>\n    <tr>\n      <th>159</th>\n      <td>Ninox strenua</td>\n      <td>Powerful Owl</td>\n      <td>1km</td>\n    </tr>\n    <tr>\n      <th>326</th>\n      <td>Tyto tenebricosa</td>\n      <td>Sooty Owl</td>\n      <td>1km</td>\n    </tr>\n    <tr>\n      <th>356</th>\n      <td>Ninox connivens</td>\n      <td>Barking Owl</td>\n      <td>1km</td>\n    </tr>\n    <tr>\n      <th>382</th>\n      <td>Hoplocephalus bungaroides</td>\n      <td>Broad-headed Snake</td>\n      <td>10km</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>21986</th>\n      <td>Anthosachne kingiana subsp. kingiana</td>\n      <td>Philip Island Wheat Grass</td>\n      <td>1km</td>\n    </tr>\n    <tr>\n      <th>22658</th>\n      <td>Caladenia tensa</td>\n      <td>Rigid Spider-orchid</td>\n      <td>10km</td>\n    </tr>\n    <tr>\n      <th>22659</th>\n      <td>Caladenia atroclavia</td>\n      <td>Black-clubbed Spider-orchid</td>\n      <td>10km</td>\n    </tr>\n    <tr>\n      <th>23131</th>\n      <td>Prasophyllum sandrae</td>\n      <td>Majors Creek Leek Orchid</td>\n      <td>10km</td>\n    </tr>\n    <tr>\n      <th>23133</th>\n      <td>Backhousia subargentea</td>\n      <td>Giant Ironwood</td>\n      <td>1km</td>\n    </tr>\n  </tbody>\n</table>\n<p>199 rows × 3 columns</p>\n</div>"
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sensitivelist = sensitivelist[['scientificName','vernacularName','generalisation']]\n",
+    "# sensitivelist['status'] = sensitivelist['stateConservation']\n",
+    "sensitivelist"
    ],
    "metadata": {
     "collapsed": false,
@@ -433,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
@@ -446,7 +390,7 @@
    ],
    "source": [
     "print(\"Writing to CSV\")\n",
-    "sensitive.to_csv(projectDir + \"current-lists/sensitive-lists/NSW-sensitive-2023-04-27.csv\",encoding=\"UTF-8\",index=False)\n",
+    "sensitivelist.to_csv(projectDir + \"current-lists/sensitive-lists/NSW-sensitive.csv\",encoding=\"UTF-8\",index=False)\n",
     "print('Finished processing')"
    ],
    "metadata": {
