--- a/source-code/py-notebook/VIC-conservation-sensitive.ipynb
+++ b/source-code/py-notebook/VIC-conservation-sensitive.ipynb
@@ -95,13 +95,13 @@
      "name": "#%%\n"
     }
    },
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
       "text/plain": "22182    01/01/2010\n10432    01/02/2012\n11265    01/02/2018\n12493    01/02/2021\n18298    01/03/2017\n            ...    \n13112    31/10/2016\n159      31/10/2017\n10501    31/10/2018\n11206    31/10/2020\n15567    31/10/2022\nName: LAST_MOD, Length: 899, dtype: object"
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,20 +109,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "# Drop columns\n",
     "vicchecklist = vicchecklist.drop(['PARENT_TAXON_LEVEL_CDE','PARENT_TAXON_ID','ALL_DISCIPLINE_CODES',\n",
     "                                          'TREATIES','SHORT_NAME','NVIS_GROWTHFORM','SCIENTIFIC_NME_SYNONYM',\n",
-    "                                          'COMMON_NME_SYNONYM','PRINT_ORDER_NUM'],axis=1)\n",
+    "                                          'COMMON_NME_SYNONYM','PRINT_ORDER_NUM', 'VIC_ADVISORY_STATUS', 'ORIGIN'],axis=1)\n",
     "# Rename columns\n",
     "vicchecklist = vicchecklist.rename(columns=\n",
     "{\n",
-    "    'TAXON_ID':'taxonID',\n",
     "    'SCIENTIFIC_NAME':'scientificName',\n",
-    "    'VIC_ADVISORY_STATUS':'vicadvisorystatus',\n",
-    "    'TAXON_TYPE':'speciesGroup',\n",
     "    'FFG_ACT_STATUS':'ffgactstatus',\n",
     "    'EPBC_ACT_STATUS': 'epbcactStatus',\n",
     "    'TAXON_LEVEL_CDE': 'taxonRank',\n",
@@ -135,6 +132,7 @@
     "    'EXTRACT_DATE': 'extractDate',\n",
     "    'LAST_MOD':'modified'\n",
     "})\n",
+    "vicchecklist['status'] = vicchecklist['ffgactstatus'].str.replace('(Extinct in Victoria)', '',  regex=False)\n",
     "vicchecklist['taxonRank'] = 'species'\n",
     "vicchecklist['status'] = vicchecklist['ffgactstatus']\n",
     "vicchecklist['sourceStatus'] = vicchecklist['ffgactstatus']\n",
@@ -144,6 +142,44 @@
     "vicchecklist['extractDate'] = vicchecklist['extractDate'].dt.strftime('%Y-%m-%d')\n",
     "vicchecklist['modified'] = pd.to_datetime(vicchecklist['modified'], format='%d/%m/%Y')\n",
     "vicchecklist['modified'] = vicchecklist['modified'].dt.strftime('%Y-%m-%d')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([nan, 'Extinct', 'Endangered', 'Critically Endangered',\n       'Vulnerable', 'Threatened', 'Conservation Dependent'], dtype=object)"
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vicchecklist['status'].unique()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "outputs": [],
+   "source": [
+    "vicchecklist['status'] = vicchecklist['status'].str.replace('(Extinct in Victoria)', '',  regex=False)\n",
+    "vicchecklist['status'] = vicchecklist['status'].str.strip()"
    ],
    "metadata": {
     "collapsed": false,
@@ -166,23 +202,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "outputs": [
     {
      "data": {
       "text/plain": "                            0\nsensitive list count      136\nconservation list count  1999",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>sensitive list count</th>\n      <td>136</td>\n    </tr>\n    <tr>\n      <th>conservation list count</th>\n      <td>1999</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sensitiveList = vicchecklist[vicchecklist[\"restrictedFlag\"].notna()]\n",
+    "sensitivelist = vicchecklist[vicchecklist[\"restrictedFlag\"].notna()]\n",
     "conservationList = vicchecklist[vicchecklist[\"status\"].notna()]\n",
+    "\n",
     "c = [len(conservationList.index)]\n",
-    "d = {'sensitive list count': [len(sensitiveList.index)],\n",
+    "d = {'sensitive list count': [len(sensitivelist.index)],\n",
     "     'conservation list count':[len(conservationList.index)]}\n",
     "pd.DataFrame(d).transpose()"
    ],
@@ -194,28 +231,32 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Process Conservation list"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\oco115\\PycharmProjects\\authoritative-lists\\source-code\\includes\\list_functions.py:108: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  dframe['status'] = dframe['sourceStatus'].map(code_status_dict)\n"
-     ]
+     "data": {
+      "text/plain": "array(['Extinct', 'Endangered', 'Critically Endangered', 'Vulnerable',\n       'Threatened', 'Conservation Dependent'], dtype=object)"
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "conservationList['status'].unique()\n",
-    "## Map statuses\n",
-    "state = 'VIC'\n",
-    "fname = statusDir + state + \"-codes.csv\"\n",
-    "conservationList= lf.map_status(state, fname, conservationList)"
+    "conservationList['status'].unique()"
    ],
    "metadata": {
     "collapsed": false,
@@ -226,19 +267,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "outputs": [
     {
      "data": {
-      "text/plain": "array(['Critically Endangered', 'Vulnerable', 'Endangered', nan],\n      dtype=object)"
+      "text/plain": "Index(['TAXON_ID', 'scientificName', 'vernacularName',\n       'scientificNameAuthority', 'primaryDiscipline', 'taxonRank',\n       'TAXON_TYPE', 'ffgactstatus', 'epbcactStatus', 'restrictedFlag',\n       'modified', 'extractDate', 'status', 'sourceStatus'],\n      dtype='object')"
      },
-     "execution_count": 6,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sensitiveList['status'].unique()"
+    "conservationList.columns"
    ],
    "metadata": {
     "collapsed": false,
@@ -252,8 +293,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "#Write to CSV\n",
-    "conservationList.to_csv(projectDir + cdataDir + \"VIC-conservation.csv\",  encoding=\"UTF-8\", index=False)"
+    "conservationList= conservationList.loc[:, ['scientificName', 'vernacularName', 'status', 'sourceStatus']]"
    ],
    "metadata": {
     "collapsed": false,
@@ -264,7 +304,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
+   "outputs": [],
+   "source": [
+    "#Write to CSV\n",
+    "conservationList.to_csv(projectDir + cdataDir + \"VIC-conservation-20230505.csv\",  encoding=\"UTF-8\", index=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Process Sensitive List"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array(['Critically Endangered', 'Vulnerable', 'Endangered', nan],\n      dtype=object)"
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sensitivelist['status'].unique()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [],
+   "source": [
+    "sensitivelist = sensitivelist[['scientificName', 'vernacularName']]\n",
+    "sensitivelist['generalisation'] = \"1 km\""
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "outputs": [
     {
      "name": "stdout",
@@ -275,7 +380,7 @@
     }
    ],
    "source": [
-    "sensitiveList.to_csv(projectDir + sdataDir + \"VIC-sensitive.csv\",  encoding=\"UTF-8\", index=False)\n",
+    "sensitivelist.to_csv(projectDir + sdataDir + \"VIC-sensitive.csv\",  encoding=\"UTF-8\", index=False)\n",
     "print('Finished processing')"
    ],
    "metadata": {
