2023-06-01: updated both conservation and sensitive lists. Some code updates

--- a/source-code/py-notebook/NSW-conservation-sensitive.ipynb
+++ b/source-code/py-notebook/NSW-conservation-sensitive.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -68,23 +68,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "array(['Vulnerable', 'Endangered', 'Critically Endangered', 'Extinct'],\n      dtype=object)"
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# %%script echo skipping # comment this line to download the files and save locally\n",
     "\n",
     "with urllib.request.urlopen(\"https://data.bionet.nsw.gov.au/biosvcapp/odata/SpeciesNames\") as url:\n",
     "    data = json.loads(url.read().decode())\n",
-    "data = pd.json_normalize(data, record_path =['value'])## Process Conservation\n",
+    "data = pd.json_normalize(data, record_path =['value'])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "## Process Conservation\n",
     "cdf= data[(data['stateConservation'] !='Not Listed') & (data['isCurrent'] == 'true')]\n",
     "cdf['stateConservation'].unique()"
    ],
@@ -126,7 +131,7 @@
     "## Map statuses\n",
     "# state = 'NSW'\n",
     "# fname = statusDir + state + \"-codes.csv\"\n",
-    "# df = lf.map_status(state, fname, df)"
+    "# df = lf.map_status(state, fname, df)\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -151,12 +156,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "outputs": [],
    "source": [
-    "conservationlist = cdf[(cdf['speciesID'] == cdf['taxonID'])]\n",
+    "conservationlist = cdf[(cdf['speciesID'] == cdf['taxonID'])]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Index(['dcterms_rightsHolder', 'dcterms_rights', 'dcterms_language',\n       'dcterms_type', 'dcterms_modified', 'dcterms_available', 'speciesID',\n       'taxonRank', 'kingdomID', 'kingdom', 'classID', 'class', 'orderID',\n       'order', 'familyID', 'family', 'sortOrder', 'genusID', 'genus',\n       'parentSpeciesID', 'specificEpithet', 'infraspecificEpithet',\n       'scientificNameAuthorship', 'scientificNameID', 'speciesCode_Synonym',\n       'scientificName', 'scientificNameHTML', 'vernacularName',\n       'otherVernacularNames', 'taxonID', 'currentScientificNameCode',\n       'currentScientificName', 'currentVernacularName', 'isCurrent',\n       'generalTypeID', 'generalType', 'establishmentMeans',\n       'primaryGrowthForm', 'primaryGrowthFormGroup', 'secondaryGrowthForms',\n       'secondaryGrowthFormGroups', 'stateConservation', 'protectedInNSW',\n       'sensitivityClass', 'TSProfileID', 'countryConservation',\n       'highThreatWeed', 'widelyCultivatedNativeSpecies', 'CAMBA', 'JAMBA',\n       'ROKAMBA'],\n      dtype='object')"
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conservationlist.columns"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [],
+   "source": [
     "conservationlist = conservationlist[\n",
-    "    ['scientificName', 'vernacularName','stateconservation']]\n",
+    "    ['scientificName', 'vernacularName', 'family', 'genus', 'stateConservation']]\n",
     "conservationlist['status'] = conservationlist['stateConservation']\n",
     "conservationlist = conservationlist.rename(columns={\"stateConservation\": \"sourceStatus\"})\n"
    ],
@@ -194,7 +235,7 @@
    ],
    "source": [
     "print(\"Writing to CSV\")\n",
-    "conservationlist.to_csv(projectDir + \"current-lists/conservation-lists/NSW-conservationlist-2023-05-05.csv\",encoding=\"UTF-8\",index=False)\n",
+    "conservationlist.to_csv(projectDir + \"current-lists/conservation-lists/NSW-conservationlist-20230601.csv\",encoding=\"UTF-8\",index=False)\n",
     "print('Finished processing')"
    ],
    "metadata": {
@@ -218,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "sdf = data"
@@ -244,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "dictn = {\"Category 3\": \"1km\",\n",
@@ -261,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "select = ['Category 3','Category 2','Category 1']"
@@ -297,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "outputs": [],
    "source": [
     "sdf['generalisation'] = sdf['sensitivityClass']\n",
@@ -325,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "outputs": [],
    "source": [
     "sensitivelist = sdf[(sdf['speciesID'] == sdf['taxonID']) & sdf['sensitivityClass'].isin(select)]"
@@ -339,20 +380,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "outputs": [
     {
      "data": {
-      "text/plain": "                             scientificName               vernacularName  \\\n5                  Callocephalon fimbriatum           Gang-gang Cockatoo   \n159                           Ninox strenua                 Powerful Owl   \n326                        Tyto tenebricosa                    Sooty Owl   \n356                         Ninox connivens                  Barking Owl   \n382               Hoplocephalus bungaroides           Broad-headed Snake   \n...                                     ...                          ...   \n21986  Anthosachne kingiana subsp. kingiana    Philip Island Wheat Grass   \n22658                       Caladenia tensa          Rigid Spider-orchid   \n22659                  Caladenia atroclavia  Black-clubbed Spider-orchid   \n23131                  Prasophyllum sandrae     Majors Creek Leek Orchid   \n23133                Backhousia subargentea               Giant Ironwood   \n\n      generalisation  \n5                1km  \n159              1km  \n326              1km  \n356              1km  \n382             10km  \n...              ...  \n21986            1km  \n22658           10km  \n22659           10km  \n23131           10km  \n23133            1km  \n\n[199 rows x 3 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>scientificName</th>\n      <th>vernacularName</th>\n      <th>generalisation</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>5</th>\n      <td>Callocephalon fimbriatum</td>\n      <td>Gang-gang Cockatoo</td>\n      <td>1km</td>\n    </tr>\n    <tr>\n      <th>159</th>\n      <td>Ninox strenua</td>\n      <td>Powerful Owl</td>\n      <td>1km</td>\n    </tr>\n    <tr>\n      <th>326</th>\n      <td>Tyto tenebricosa</td>\n      <td>Sooty Owl</td>\n      <td>1km</td>\n    </tr>\n    <tr>\n      <th>356</th>\n      <td>Ninox connivens</td>\n      <td>Barking Owl</td>\n      <td>1km</td>\n    </tr>\n    <tr>\n      <th>382</th>\n      <td>Hoplocephalus bungaroides</td>\n      <td>Broad-headed Snake</td>\n      <td>10km</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>21986</th>\n      <td>Anthosachne kingiana subsp. kingiana</td>\n      <td>Philip Island Wheat Grass</td>\n      <td>1km</td>\n    </tr>\n    <tr>\n      <th>22658</th>\n      <td>Caladenia tensa</td>\n      <td>Rigid Spider-orchid</td>\n      <td>10km</td>\n    </tr>\n    <tr>\n      <th>22659</th>\n      <td>Caladenia atroclavia</td>\n      <td>Black-clubbed Spider-orchid</td>\n      <td>10km</td>\n    </tr>\n    <tr>\n      <th>23131</th>\n      <td>Prasophyllum sandrae</td>\n      <td>Majors Creek Leek Orchid</td>\n      <td>10km</td>\n    </tr>\n    <tr>\n      <th>23133</th>\n      <td>Backhousia subargentea</td>\n      <td>Giant Ironwood</td>\n      <td>1km</td>\n    </tr>\n  </tbody>\n</table>\n<p>199 rows × 3 columns</p>\n</div>"
+      "text/plain": "Index(['dcterms_rightsHolder', 'dcterms_rights', 'dcterms_language',\n       'dcterms_type', 'dcterms_modified', 'dcterms_available', 'speciesID',\n       'taxonRank', 'kingdomID', 'kingdom', 'classID', 'class', 'orderID',\n       'order', 'familyID', 'family', 'sortOrder', 'genusID', 'genus',\n       'parentSpeciesID', 'specificEpithet', 'infraspecificEpithet',\n       'scientificNameAuthorship', 'scientificNameID', 'speciesCode_Synonym',\n       'scientificName', 'scientificNameHTML', 'vernacularName',\n       'otherVernacularNames', 'taxonID', 'currentScientificNameCode',\n       'currentScientificName', 'currentVernacularName', 'isCurrent',\n       'generalTypeID', 'generalType', 'establishmentMeans',\n       'primaryGrowthForm', 'primaryGrowthFormGroup', 'secondaryGrowthForms',\n       'secondaryGrowthFormGroups', 'stateConservation', 'protectedInNSW',\n       'sensitivityClass', 'TSProfileID', 'countryConservation',\n       'highThreatWeed', 'widelyCultivatedNativeSpecies', 'CAMBA', 'JAMBA',\n       'ROKAMBA', 'generalisation'],\n      dtype='object')"
      },
-     "execution_count": 11,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sensitivelist = sensitivelist[['scientificName','vernacularName','generalisation']]\n",
+    "sensitivelist.columns"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                             scientificName       family          genus  \\\n5                  Callocephalon fimbriatum   Cacatuidae  Callocephalon   \n159                           Ninox strenua    Strigidae          Ninox   \n326                        Tyto tenebricosa    Tytonidae           Tyto   \n356                         Ninox connivens    Strigidae          Ninox   \n382               Hoplocephalus bungaroides     Elapidae  Hoplocephalus   \n...                                     ...          ...            ...   \n21986  Anthosachne kingiana subsp. kingiana      Poaceae    Anthosachne   \n22658                       Caladenia tensa  Orchidaceae      Caladenia   \n22659                  Caladenia atroclavia  Orchidaceae      Caladenia   \n23131                  Prasophyllum sandrae  Orchidaceae   Prasophyllum   \n23133                Backhousia subargentea    Myrtaceae     Backhousia   \n\n                    vernacularName generalisation  \n5               Gang-gang Cockatoo            1km  \n159                   Powerful Owl            1km  \n326                      Sooty Owl            1km  \n356                    Barking Owl            1km  \n382             Broad-headed Snake           10km  \n...                            ...            ...  \n21986    Philip Island Wheat Grass            1km  \n22658          Rigid Spider-orchid           10km  \n22659  Black-clubbed Spider-orchid           10km  \n23131     Majors Creek Leek Orchid           10km  \n23133               Giant Ironwood            1km  \n\n[199 rows x 5 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>scientificName</th>\n      <th>family</th>\n      <th>genus</th>\n      <th>vernacularName</th>\n      <th>generalisation</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>5</th>\n      <td>Callocephalon fimbriatum</td>\n      <td>Cacatuidae</td>\n      <td>Callocephalon</td>\n      <td>Gang-gang Cockatoo</td>\n      <td>1km</td>\n    </tr>\n    <tr>\n      <th>159</th>\n      <td>Ninox strenua</td>\n      <td>Strigidae</td>\n      <td>Ninox</td>\n      <td>Powerful Owl</td>\n      <td>1km</td>\n    </tr>\n    <tr>\n      <th>326</th>\n      <td>Tyto tenebricosa</td>\n      <td>Tytonidae</td>\n      <td>Tyto</td>\n      <td>Sooty Owl</td>\n      <td>1km</td>\n    </tr>\n    <tr>\n      <th>356</th>\n      <td>Ninox connivens</td>\n      <td>Strigidae</td>\n      <td>Ninox</td>\n      <td>Barking Owl</td>\n      <td>1km</td>\n    </tr>\n    <tr>\n      <th>382</th>\n      <td>Hoplocephalus bungaroides</td>\n      <td>Elapidae</td>\n      <td>Hoplocephalus</td>\n      <td>Broad-headed Snake</td>\n      <td>10km</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>21986</th>\n      <td>Anthosachne kingiana subsp. kingiana</td>\n      <td>Poaceae</td>\n      <td>Anthosachne</td>\n      <td>Philip Island Wheat Grass</td>\n      <td>1km</td>\n    </tr>\n    <tr>\n      <th>22658</th>\n      <td>Caladenia tensa</td>\n      <td>Orchidaceae</td>\n      <td>Caladenia</td>\n      <td>Rigid Spider-orchid</td>\n      <td>10km</td>\n    </tr>\n    <tr>\n      <th>22659</th>\n      <td>Caladenia atroclavia</td>\n      <td>Orchidaceae</td>\n      <td>Caladenia</td>\n      <td>Black-clubbed Spider-orchid</td>\n      <td>10km</td>\n    </tr>\n    <tr>\n      <th>23131</th>\n      <td>Prasophyllum sandrae</td>\n      <td>Orchidaceae</td>\n      <td>Prasophyllum</td>\n      <td>Majors Creek Leek Orchid</td>\n      <td>10km</td>\n    </tr>\n    <tr>\n      <th>23133</th>\n      <td>Backhousia subargentea</td>\n      <td>Myrtaceae</td>\n      <td>Backhousia</td>\n      <td>Giant Ironwood</td>\n      <td>1km</td>\n    </tr>\n  </tbody>\n</table>\n<p>199 rows × 5 columns</p>\n</div>"
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sensitivelist = sensitivelist[['scientificName', 'family', 'genus', 'vernacularName','generalisation']]\n",
     "# sensitivelist['status'] = sensitivelist['stateConservation']\n",
     "sensitivelist"
    ],
@@ -377,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "outputs": [
     {
      "name": "stdout",
@@ -390,7 +454,7 @@
    ],
    "source": [
     "print(\"Writing to CSV\")\n",
-    "sensitivelist.to_csv(projectDir + \"current-lists/sensitive-lists/NSW-sensitive.csv\",encoding=\"UTF-8\",index=False)\n",
+    "sensitivelist.to_csv(projectDir + \"current-lists/sensitive-lists/NSW-sensitive-20230601.csv\",encoding=\"UTF-8\",index=False)\n",
     "print('Finished processing')"
    ],
    "metadata": {
