--- a/source-code/py-notebook/VIC-conservation-sensitive.ipynb
+++ b/source-code/py-notebook/VIC-conservation-sensitive.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -95,13 +95,13 @@
      "name": "#%%\n"
     }
    },
-   "execution_count": 3,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
       "text/plain": "22182    01/01/2010\n10432    01/02/2012\n11265    01/02/2018\n12493    01/02/2021\n18298    01/03/2017\n            ...    \n13112    31/10/2016\n159      31/10/2017\n10501    31/10/2018\n11206    31/10/2020\n15567    31/10/2022\nName: LAST_MOD, Length: 899, dtype: object"
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "# Drop columns\n",
@@ -152,13 +152,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([nan, 'Extinct', 'Endangered', 'Critically Endangered',\n       'Vulnerable', 'Threatened', 'Conservation Dependent'], dtype=object)"
+      "text/plain": "array([nan, 'Extinct', 'Endangered', 'Critically Endangered',\n       'Vulnerable', 'Threatened', 'Conservation Dependent',\n       'Endangered (Extinct in Victoria)'], dtype=object)"
      },
-     "execution_count": 43,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "vicchecklist['status'] = vicchecklist['status'].str.replace('(Extinct in Victoria)', '',  regex=False)\n",
@@ -202,14 +202,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "outputs": [
     {
      "data": {
       "text/plain": "                            0\nsensitive list count      136\nconservation list count  1999",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>sensitive list count</th>\n      <td>136</td>\n    </tr>\n    <tr>\n      <th>conservation list count</th>\n      <td>1999</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,13 +244,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
       "text/plain": "array(['Extinct', 'Endangered', 'Critically Endangered', 'Vulnerable',\n       'Threatened', 'Conservation Dependent'], dtype=object)"
      },
-     "execution_count": 45,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,13 +267,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
       "text/plain": "Index(['TAXON_ID', 'scientificName', 'vernacularName',\n       'scientificNameAuthority', 'primaryDiscipline', 'taxonRank',\n       'TAXON_TYPE', 'ffgactstatus', 'epbcactStatus', 'restrictedFlag',\n       'modified', 'extractDate', 'status', 'sourceStatus'],\n      dtype='object')"
      },
-     "execution_count": 46,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "conservationList= conservationList.loc[:, ['scientificName', 'vernacularName', 'status', 'sourceStatus']]"
@@ -304,11 +304,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "#Write to CSV\n",
-    "conservationList.to_csv(projectDir + cdataDir + \"VIC-conservation-20230505.csv\",  encoding=\"UTF-8\", index=False)"
+    "conservationList.to_csv(projectDir + cdataDir + \"VIC-conservation-20230601.csv\",  encoding=\"UTF-8\", index=False)"
    ],
    "metadata": {
     "collapsed": false,
@@ -331,13 +331,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "outputs": [
     {
      "data": {
       "text/plain": "array(['Critically Endangered', 'Vulnerable', 'Endangered', nan],\n      dtype=object)"
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "sensitivelist = sensitivelist[['scientificName', 'vernacularName']]\n",
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "outputs": [
     {
      "name": "stdout",
@@ -380,7 +380,7 @@
     }
    ],
    "source": [
-    "sensitivelist.to_csv(projectDir + sdataDir + \"VIC-sensitive.csv\",  encoding=\"UTF-8\", index=False)\n",
+    "sensitivelist.to_csv(projectDir + sdataDir + \"VIC-sensitive-20230601.csv\",  encoding=\"UTF-8\", index=False)\n",
     "print('Finished processing')"
    ],
    "metadata": {
