--- a/source-code/py-notebook/conservation/TAS-conservation.ipynb
+++ b/source-code/py-notebook/conservation/TAS-conservation.ipynb
@@ -6,8 +6,7 @@
     "# Tas Conservation List\n",
     "## List Identifiers\n",
     "* Conservation list: __[dr654](https://lists.ala.org.au/speciesListItem/list/dr654)__ (and [dr654 in test](https://lists-test.ala.org.au/speciesListItem/list/dr654))\n",
-    "* Sensitive list: __[dr654](https://lists.ala.org.au/speciesListItem/list/dr654)__ (and [dr654 in test](https://lists-test.ala.org.au/speciesListItem/list/dr654))\n",
-    "* Collection: __[dr654](https://collections.ala.org.au/public/show/dr654)__ __[dr491](https://collections.ala.org.au/public/show/dr491)__\n",
+    "* Collection: __[dr654](https://collections.ala.org.au/public/show/dr654)__\n",
     "\n",
     "## Source Data\n",
     "\n",
@@ -56,8 +55,7 @@
     "sys.path.append(os.path.abspath(projectDir + \"source-code/includes\"))\n",
     "\n",
     "import list_functions as lf\n",
-    "cdataDir = \"current-lists/conservation-lists/\"\n",
-    "sdataDir = \"current-lists/sensitive-lists/\""
+    "cdataDir = \"current-lists/conservation-lists/\""
    ],
    "metadata": {
     "collapsed": false,
@@ -270,15 +268,6 @@
     "# remove any with sourceStatus = *\n",
     "conservationlist['status'].fillna(' ', inplace=True)\n",
     "conservationlist = conservationlist[~conservationlist['status'].str.contains('*', regex=False)]\n",
-    "# conservationCodesMapping = {\n",
-    "#     'x':'Extinct',\n",
-    "#     'v':'Vulnerable',\n",
-    "#     'r':'Rare',\n",
-    "#     'e':'Endangered',\n",
-    "#     'ex':'Extinct'\n",
-    "# }\n",
-    "# conservationlist['status'] = conservationlist['sourceStatus'].str.strip().map(conservationCodesMapping).fillna(conservationlist['sourceStatus'])\n",
-    "# conservationlist.drop(['Group','Flora/Fauna'],axis=1,inplace=True)\n",
     "conservationlist"
    ],
    "metadata": {
@@ -343,308 +332,7 @@
    "source": [
     "print('Writing to CSV')\n",
     "conservationlist.to_csv(projectDir + cdataDir + \"TAS-conservation-20230601.csv\", encoding=\"UTF-8\", index=False)\n",
-    "print('Finished processing conservation')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## Sensitive List update\n",
-    "## Update 2022-02-21 - adding 2 species to existing list"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading TAS Sensitive List from ALA\n",
-      "download_ala_list:  https://lists.ala.org.au/ws/speciesListItems/dr491?max=10000&includeKVP=true\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('Downloading TAS Sensitive List from ALA')\n",
-    "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + \"dr491\" + \"?max=10000&includeKVP=true\"\n",
-    "sensitivelist = lf.download_ala_specieslist(prodListUrl)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "Index(['id', 'name', 'commonName', 'scientificName', 'lsid', 'dataResourceUid',\n       'kvpValues'],\n      dtype='object')"
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sensitivelist.columns"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "          scientificName             commonName generalisation\n0      Lomatia tasmanica         King's Lomatia        Withold\n1  Prasophyllum taphanyx  Graveside Leek-orchid          10 km\n2     Caladenia vulgaris         Summer Fingers          10 km",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>scientificName</th>\n      <th>commonName</th>\n      <th>generalisation</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Lomatia tasmanica</td>\n      <td>King's Lomatia</td>\n      <td>Withold</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Prasophyllum taphanyx</td>\n      <td>Graveside Leek-orchid</td>\n      <td>10 km</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Caladenia vulgaris</td>\n      <td>Summer Fingers</td>\n      <td>10 km</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sensitivelist = sensitivelist[['scientificName', 'commonName']]\n",
-    "sensitivelist['generalisation'] = '10 km'\n",
-    "# generalisation for Lomatia is 'Withhold'\n",
-    "sensitivelist.loc[sensitivelist['scientificName'] == 'Lomatia tasmanica', 'generalisation'] = 'Withold'\n",
-    "sensitivelist"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "          scientificName             commonName generalisation\n0      Lomatia tasmanica         King's Lomatia        Withold\n1  Prasophyllum taphanyx  Graveside Leek-orchid          10 km\n2     Caladenia vulgaris         Summer Fingers          10 km",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>scientificName</th>\n      <th>commonName</th>\n      <th>generalisation</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Lomatia tasmanica</td>\n      <td>King's Lomatia</td>\n      <td>Withold</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Prasophyllum taphanyx</td>\n      <td>Graveside Leek-orchid</td>\n      <td>10 km</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Caladenia vulgaris</td>\n      <td>Summer Fingers</td>\n      <td>10 km</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Adding 2 new species\n",
-    "# newrow1 = {'scientificName': 'Prasophyllum taphanyx'}\n",
-    "# newrow2 = {'scientificName': 'Caladenia vulgaris var. nunguensis'}\n",
-    "# sensitivelist = sensitivelist.append(newrow1, ignore_index=True)\n",
-    "# sensitivelist = sensitivelist.append(newrow2, ignore_index=True)\n",
-    "sensitivelist"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing to CSV\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('Writing to CSV')\n",
-    "sensitivelist.to_csv(projectDir + sdataDir + \"TAS-sensitive-20230601.csv\", encoding=\"UTF-8\", index=False)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# Manual List check\n",
-    "\n",
-    "**Instructions**\n",
-    "1. Load the lists above into the lists-test tool\n",
-    "2. Check the list name matching score and the text appearance on species pages\n",
-    "3. Unskip the below code and Run the reports below to compare to production. Send the changelog.csv to check. Correct any issues.\n",
-    "4. Save the production list into the `historical lists` directory by uncommenting the code section below.\n",
-    "5. Load the lists into production"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### Conservation List - Download old and new and compare"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "# %%script echo skipping # comment this line to run this code\n",
-    "\n",
-    "import datetime\n",
-    "monthStr = datetime.datetime.now().strftime('%Y%m')\n",
-    "ltype = \"C\"\n",
-    "# conservation\n",
-    "filename = \"TAS-conservation.csv\"\n",
-    "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + \"dr654\" + \"?max=10000&includeKVP=true\"\n",
-    "testListUrl = \"https://lists-test.ala.org.au/ws/speciesListItems/\" + \"dr654\" + \"?max=10000&includeKVP=true\"\n",
-    "changelist = lf.get_changelist(testListUrl, prodListUrl, ltype)\n",
-    "# save the lists locally\n",
-    "changelist.to_csv(projectDir + \"analysis/change-log/\" + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
-    "\n",
-    "changelist"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### Download Production lists to Historical Lists directory"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "%%script echo skipping # comment this line to do a list check between test and production and save the changelog\n",
-    "\n",
-    "prodList = lf.download_ala_list(prodListUrl)  # save the prod list to the historical lists directory\n",
-    "prodList = lf.kvp_to_columns(prodList)\n",
-    "prodList.to_csv(projectDir + \"historical-lists/conservation/\" + filename, encoding=\"UTF-8\", index=False)\n",
-    "print('Finished downloading historical list')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### Sensitive List - Download old and new and compare\n",
-    "### not currently in lists-test"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "%%script echo skipping # comment this line to run this code\n",
-    "\n",
-    "import datetime\n",
-    "monthStr = datetime.datetime.now().strftime('%Y%m')\n",
-    "ltype = \"S\"\n",
-    "# conservation\n",
-    "filename = \"TAS-sensitive.csv\"\n",
-    "prodListUrl = \"https://lists.ala.org.au/ws/speciesListItems/\" + \"dr491\" + \"?max=10000&includeKVP=true\"\n",
-    "# testListUrl = \"https://lists-test.ala.org.au/ws/speciesListItems/\" + \"dr2627\" + \"?max=10000&includeKVP=true\"\n",
-    "changelist = lf.get_changelist(testListUrl, prodListUrl, ltype)\n",
-    "# save the lists locally\n",
-    "changelist.to_csv(projectDir + \"analysis/change-log/\" + monthStr + \"-\" + filename, encoding=\"UTF-8\", index=False)\n",
-    "\n",
-    "changelist"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### Download Production lists to Historical Lists directory"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "%%script echo skipping # comment this line to do a list check between test and production and save the changelog\n",
-    "\n",
-    "prodList = lf.download_ala_list(prodListUrl)  # save the prod list to the historical lists directory\n",
-    "prodList = lf.kvp_to_columns(prodList)\n",
-    "prodList.to_csv(projectDir + \"historical-lists/sensitive/\" + filename, encoding=\"UTF-8\", index=False)\n",
-    "print('Finished downloading historical list')"
+    "print('Finished writing TAS conservation list')"
    ],
    "metadata": {
     "collapsed": false,
