Re-arranged directories for Analysis and Monitoring Archived combined notebooks

--- a/source-code/py-notebook/Birdlife-taxonomic-checklist.ipynb
+++ b/source-code/py-notebook/Birdlife-taxonomic-checklist.ipynb
@@ -124,7 +124,10 @@
     "## Clean up"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -207,7 +210,10 @@
     "## BirdLife Australia Working List v4"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
